data/testing_system/submissions/12/err.txt
data/testing_system/submissions/12/submission.cpp:1:6: error: expected constructor, destructor, or type conversion before '(' token
 print(sum(map(int, input().split())))
      ^
